--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ greenlet==3.0.3
 idna==3.6
 Mako==1.3.0
 MarkupSafe==2.1.3
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
 python-dotenv==1.0.0
@@ -15,5 +15,6 @@ sniffio==1.3.0
 SQLAlchemy==2.0.25
 starlette==0.35.1
 typing_extensions==4.9.0
-uvicorn==0.26.0
-uuid==1.30
+sqlalchemy-utils
+uvicorn
+gunicorn
