Finish adding Docker support (hopefully)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,19 +3,23 @@ services:
     db:
         image: postgres:15.1-alpine
         container_name: db_app
+        volumes:
+            - pgdata:/var/lib/postgresql/data
         command: -p 1221
         expose:
             - 1221
         env_file:
-            - .env
+            - .env-prod
     app:
         build:
             context: .
         env_file:
-            - .env
+            - .env-prod
         container_name: fastapi_app
         command: ["/fastapi_app/docker/app.sh"]
         ports:
             - 9999:8000
         depends_on:
             - db
+volumes:
+    pgdata:
