--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ sniffio==1.3.0
 SQLAlchemy==2.0.25
 starlette==0.35.1
 typing_extensions==4.9.0
+pytest==7.4.4
+httpx==0.26.0
 sqlalchemy-utils
 uvicorn
 gunicorn
