--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,36 @@
+aioredis==2.0.1
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.2.0
+async-timeout==4.0.3
+certifi==2023.11.17
+click==8.1.7
 exceptiongroup==1.2.0
 fastapi==0.109.0
+git-filter-repo==2.38.0
 greenlet==3.0.3
+gunicorn==21.2.0
+h11==0.14.0
+hiredis==2.3.2
+httpcore==1.0.2
+httpx==0.26.0
 idna==3.6
+iniconfig==2.0.0
 Mako==1.3.0
 MarkupSafe==2.1.3
+packaging==23.2
+pluggy==1.4.0
 psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
+pytest==8.0.0
 python-dotenv==1.0.0
+redis==5.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.25
+SQLAlchemy-Utils==0.41.1
 starlette==0.35.1
+tomli==2.0.1
 typing_extensions==4.9.0
-pytest==7.4.4
-httpx==0.26.0
-sqlalchemy-utils
-uvicorn
-gunicorn
+uuid==1.30
+uvicorn==0.27.0
