--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,7 +30,19 @@ services:
             - 8000:8000
         depends_on:
             - db
+            - redis
         restart: always
+
+    redis:
+        image: redis:latest
+        env_file:
+            - .env-prod
+        container_name: redis_app
+        command: --port 5370
+        networks:
+            - ylab-network
+        expose:
+            - 5370
 
 networks:
     ylab-network:
