--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,14 @@ annotated-types==0.6.0
 anyio==4.2.0
 async-timeout==4.0.3
 certifi==2023.11.17
+cffi==1.16.0
+cfgv==3.4.0
 click==8.1.7
+cryptography==42.0.2
+distlib==0.3.8
 exceptiongroup==1.2.0
 fastapi==0.109.0
+filelock==3.13.1
 git-filter-repo==2.38.0
 greenlet==3.0.3
 gunicorn==21.2.0
@@ -14,23 +19,33 @@ h11==0.14.0
 hiredis==2.3.2
 httpcore==1.0.2
 httpx==0.26.0
+identify==2.5.33
 idna==3.6
 iniconfig==2.0.0
 Mako==1.3.0
 MarkupSafe==2.1.3
+nodeenv==1.8.0
 packaging==23.2
+platformdirs==4.2.0
 pluggy==1.4.0
+pre-commit==3.6.0
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
+pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
 pytest==8.0.0
 python-dotenv==1.0.0
+PyYAML==6.0.1
 redis==5.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.25
 SQLAlchemy-Utils==0.41.1
 starlette==0.35.1
 tomli==2.0.1
+types-pyOpenSSL==24.0.0.20240130
+types-redis==4.6.0.20240106
 typing_extensions==4.9.0
 uuid==1.30
 uvicorn==0.27.0
+virtualenv==20.25.0
